fix long tags using two lines by implement flex wrap for styling

--- a/app/assets/stylesheets/components/question/question_item.scss
+++ b/app/assets/stylesheets/components/question/question_item.scss
@@ -23,7 +23,7 @@
 .question_item-body {
     padding-top: 0.65rem; 
     padding-bottom: 0.65rem; 
-    font-size: $info-size; 
+    font-size: $small-size; 
     line-height: $small-line-height; 
 }
 
